--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^1.4.2",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.9.0",
     "tailwind-typewriter": "^1.0.1"
   },
   "devDependencies": {
@@ -23,6 +27,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "tsconfig-paths": "^4.1.2",
     "vite": "^4.1.0"
   }
 }
