--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^1.4.2",
+    "aos": "^2.3.4",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "prop-types": "^15.8.1",
@@ -21,6 +22,7 @@
     "tailwind-typewriter": "^1.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
