--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^1.4.2",
     "flowbite": "^1.6.4",
