--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "vite build",
     "preview": "vite preview --port 8080"
   },
+  "files": [
+    "particles.js",
+    "particles.min.js"
+  ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -21,8 +25,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-particles": "^2.9.3",
     "react-router-dom": "^6.9.0",
-    "tailwind-typewriter": "^1.0.1"
+    "tailwind-typewriter": "^1.0.1",
+    "tsparticles": "^2.9.3",
+    "tsparticles-engine": "^2.9.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
